IntergalacticFreightTrades/force-app/main/default/objects/Cargo__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fragile</fullName>
                <default>true</default>
                <label>Fragile</label>
            </value>
            <value>
                <fullName>Perishable</fullName>
            </value>
            <value>
                <fullName>Hazardous</fullName>
            </value>
            <value>
                <fullName>Oversized</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>