IntergalacticFreightTrades/force-app/main/default/objects/Cargo__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Refrigerated</fullName>
            </value>
            <value>
                <fullName>Hazardous</fullName>
            </value>
            <value>
                <fullName>Oversized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>